Revision history for JSON-Schema-Modern

{{$NEXT}}
          - minimum Perl version raised to 5.20

0.524     2021-11-10 04:36:49Z
          - some refactoring of vocabulary and document methods, to faciliate
            re-use
          - new utility functions: is_uri_reference, assert_keyword_exists
          - allow specifying the metaschema_uri for a schema document
          - add "validate" method to Document object
          - updated draft2019-09 and added draft2020-12 hyperschema schemas

0.523     2021-10-24 05:58:27Z
          - fix tests that were relying on an optional prereq
          - properly gate experimental features by version

0.522     2021-10-22 22:26:29Z
          - 'date-time' format now properly handles leap seconds

0.521     2021-10-04 05:36:10Z
          - fix issues when referencing a schema in a metaschema:
            whose vocabulary is not known, but its keywords can still be
            validated, or which does not use the $vocabulary keyword at all

0.520     2021-09-27 05:56:11Z
          - support arbitrary metaschemas in the "$schema" keyword
          - support custom vocabulary classes, for use in metaschemas that use
            the "$vocabulary" keyword

0.519     2021-09-21 03:56:13Z
          - fix tests that were relying on an optional prereq

0.518     2021-09-18 22:00:42Z
          - skip some regex tests when Unicode library is too old for those
            character classes being tested
          - specification versions can now change, via the $schema keyword,
            within schema resources in a single document or via $ref to another
            resource

0.517     2021-08-28 04:34:17Z
          - restore some optional modules used for format validation to the
            prereq list that were mistakenly dropped in version 0.515
          - date-time, date and time formats no longer match non-ascii digits

0.516     2021-08-14 19:53:16Z
          - fix email format tests on older prereqs