@@ -1,26 +1,0 @@
-{
-    "$schema": "https://json-schema.org/draft/2019-09/hyper-schema",
-    "$id": "https://json-schema.org/draft/2019-09/hyper-schema",
-    "$vocabulary": {
-        "https://json-schema.org/draft/2019-09/vocab/core": true,
-        "https://json-schema.org/draft/2019-09/vocab/applicator": true,
-        "https://json-schema.org/draft/2019-09/vocab/validation": true,
-        "https://json-schema.org/draft/2019-09/vocab/meta-data": true,
-        "https://json-schema.org/draft/2019-09/vocab/format": false,
-        "https://json-schema.org/draft/2019-09/vocab/content": true,
-        "https://json-schema.org/draft/2019-09/vocab/hyper-schema": true
-    },
-    "$recursiveAnchor": true,
-
-    "title": "JSON Hyper-Schema",
-    "allOf": [
-        {"$ref": "https://json-schema.org/draft/2019-09/schema"},
-        {"$ref": "https://json-schema.org/draft/2019-09/meta/hyper-schema"}
-    ],
-    "links": [
-        {
-            "rel": "self",
-            "href": "{+%24id}"
-        }
-    ]
-}
