@@ -1,29 +1,0 @@
-{
-    "$schema": "https://json-schema.org/draft/2019-09/hyper-schema",
-    "$id": "https://json-schema.org/draft/2019-09/meta/hyper-schema",
-    "$vocabulary": {
-        "https://json-schema.org/draft/2019-09/vocab/hyper-schema": true
-    },
-    "$recursiveAnchor": true,
-
-    "title": "JSON Hyper-Schema Vocabulary Schema",
-    "type": ["object", "boolean"],
-    "properties": {
-        "base": {
-            "type": "string",
-            "format": "uri-template"
-        },
-        "links": {
-            "type": "array",
-            "items": {
-                "$ref": "https://json-schema.org/draft/2019-09/links"
-            }
-        }
-    },
-    "links": [
-        {
-            "rel": "self",
-            "href": "{+%24id}"
-        }
-    ]
-}
