@@ -2,6 +2,8 @@ Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
           - minimum Perl version raised to 5.20
+          - dropped bundling hyper-schema files, as they are not validatable
+            without vocabulary support (see issue #44)
 
 0.524     2021-11-10 04:36:49Z
           - some refactoring of vocabulary and document methods, to faciliate
